[tool.poetry]
name = "mhw-fsm"
version = "0.1.0"
description = ""
authors = ["Strackeror <rremilavergne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
construct = "^2.10.56"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
